# keibaai

./: .gitignore  Chapter3.ipynb  Chapter4-MNIST.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: Chapter1-checkpoint.ipynb  Chapter2-checkpoint.ipynb  Chapter3-checkpoint.ipynb
conf/: logging.ini
data/: grade.tsv
ddl/: courses.ddl  odds.ddl  race_lap_times.ddl  race_uma.ddl  races.ddl
ddl_oracle/: courses.ddl  drop_all.ddl  error_races.ddl  grade.ddl  odds.ddl  race_lap_times.ddl  race_predict.ddl  race_predict2.ddl  race_uma.ddl  races.ddl  view_agg_race_first_time.ddl  view_agg_race_time.ddl  view_mart_rece_result.ddl
keibaai/: Untitled1.ipynb  course.py  db_connection_dev.ipynb  execute_ddl_oracle.py  execute_odds_scraping.py  execute_odds_scraping_by_term.py  execute_race_data_scraping.py  execute_race_data_scraping_by_term.py  expectation.sql  expectation2.sql  netkeiba_scraper.py  odds.py  odds_scraping_dev.ipynb  pandas_dev.ipynb  race.py  race_data_regression.ipynb  race_scraping_dev.ipynb  race_uma_view.sql  scraping_dev.ipynb  select_race_uma.sql
keibaai/.ipynb_checkpoints/: scraping_dev-checkpoint.ipynb
keibaai/model/: course.py  odds.py  race.py  settings.py
tests/: test_keibaai.py
