[tool.poetry]
name = "keibaai"
version = "0.1.0"
description = ""
authors = ["mokkan <shun8.ig@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
chainer = "^7.7.0"
sklearn = "^0.0"
scikit-learn = "^0.24.1"
pandas = "^1.3.4"
SQLAlchemy = "^1.4.26"
cx-Oracle = "^8.2.1"
requests = "^2.26.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
